--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 scikit-learn = "^1.5.1"
 pd = {extras = ["pyarrow"], version = "^0.0.4"}
 pyarrow = "^17.0.0"
+mlflow = "^2.16.0"
+hyperopt = "^0.2.7"
 
 
 [tool.poetry.group.dev.dependencies]
