--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 scikit-learn = "^1.5.1"
 pd = {extras = ["pyarrow"], version = "^0.0.4"}
 pyarrow = "^17.0.0"
 mlflow = "^2.16.0"
 hyperopt = "^0.2.7"
+jupyter = "^1.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
