--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pyarrow = "^17.0.0"
 mlflow = "^2.16.0"
 hyperopt = "^0.2.7"
 jupyter = "^1.1.1"
+evidently = "^0.4.38"
+joblib = "^1.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
